Use precompiled US Design Standards CSS
Else the CSS image paths get screwed up with no way to override them besides hacking the design standards files, which we don't want to do.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,9 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/designstandards/assets/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/designstandards/assets/css/google-fonts.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
   <script src="{{ "/designstandards/assets/js/components.js" | prepend: site.baseurl }}"></script>
 
