--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,5 @@
 @charset "utf-8";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-// This ("all") is the U.S. Design Standards -- we import the SCSS here
-// rather than linking to its precompiled CSS in our HTML so that this
-// SCSS file can take advantage of its variables (color definitions, etc.)
-@import "all";
+// These are the U.S. Design Standards variables (color definitions, etc.)
+@import "core/variables";
