--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ "/designstandards/assets/css/google-fonts.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+  <script src="{{ "/designstandards/assets/js/vendor/jquery-1.11.3.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/designstandards/assets/js/components.js" | prepend: site.baseurl }}"></script>
 
   <!-- Favicons
