--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,22 @@
   <div class="usa-footer-secondary_section">
     <div class="usa-grid-full">
       <div class="usa-footer-logo usa-width-two-thirds">
-        <img class="usa-footer-logo-img" src="{{ "/img/logos/census.png" | prepend: site.baseurl }}" alt="Census Bureau Logo">
-        <img class="usa-footer-logo-img" src="{{ "/img/logos/hud.png" | prepend: site.baseurl }}" alt="HUD Logo">
-        <img class="usa-footer-logo-img" src="{{ "/img/logos/pif.png" | prepend: site.baseurl }}" alt="PIF Logo">
-        <img class="usa-footer-logo-img" src="{{ "/img/logos/gsa.png" | prepend: site.baseurl }}" alt="GSA Logo">
+        <a href="https://www.census.gov"
+           ><img class="usa-footer-logo-img"
+                 src="{{ "/img/logos/census.png" | prepend: site.baseurl }}"
+                 alt="Census Bureau Logo"></a>
+        <a href="http://www.hud.gov"
+           ><img class="usa-footer-logo-img"
+                 src="{{ "/img/logos/hud.png" | prepend: site.baseurl }}"
+                 alt="HUD Logo"></a>
+        <a href="https://presidentialinnovationfellows.gov"
+           ><img class="usa-footer-logo-img"
+                 src="{{ "/img/logos/pif.png" | prepend: site.baseurl }}"
+                 alt="PIF Logo"></a>
+        <a href="http://www.gsa.gov"
+           ><img class="usa-footer-logo-img"
+                 src="{{ "/img/logos/gsa.png" | prepend: site.baseurl }}"
+                 alt="GSA Logo"></a>
       </div>
 
       <div class="usa-footer-contact-links usa-width-one-third">
