--- a/css/main.scss
+++ b/css/main.scss
@@ -12,20 +12,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 main > article,
-.banner,
-.persona {
+.ood-banner,
+.ood-persona {
   overflow: auto; /* defeat margin collapse */
 }
 
 .usa-disclaimer,
-.banner > *,
+.ood-banner > *,
 main > article > * ,
 footer {
   padding-left: $site-margins;
   padding-right: $site-margins;
 }
 
-.banner {
+.ood-banner {
   background-color: $color-primary-darkest;
 
   & > * {
@@ -49,20 +49,20 @@ footer {
   max-width: none;
 }
 
-.persona {
+.ood-persona {
   background-color: $color-white;
   border-radius: 3px;
   margin: $grid-margins;
   padding-top: $grid-margins * .75;
 
-  img.head {
+  img.ood-persona-head {
     height: 12rem;
     width: 12rem;
     margin: $grid-margins*.5 $grid-margins*.35 $grid-margins*.25 0;
     vertical-align: middle;
   }
 
-  .name {
+  .ood-persona-name {
     color: $color-secondary;
     display: inline-block;
     font-size: 3.5rem;
