Fix quote padding

--- a/css/main.scss
+++ b/css/main.scss
@@ -87,6 +87,7 @@ article.alt {
 .ood-quotation p {
   color: $color-primary-alt-darkest;
   margin: $grid-margins*1.5 auto;
+  padding: 0 $site-margins;
 }
 
 .usa-background-dark {
