Shrink footer logos, add GitHub link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,9 @@
           <h3 class="usa-footer-contact-heading">Open Opportunity Data</h3>
           <p>
             <a href="{{ site.url }}">{{ site.url }}</a>
-          </p>
-          <p>
+            |
+            <a href="{{ site.repo_url }}">GitHub</a>
+            <br>
             <a href="mailto:opportunity-data@listserv.gsa.gov">opportunity-data@listserv.gsa.gov</a>
           </p>
         </address>
