Add link to data prover websites
Also styles "Edit in GitHub" links a little nicer

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,14 @@ footer {
   max-width: none;
 }
 
+.ood-provider {
+  .repo {
+    float: right;
+    font-size: smaller;
+    font-weight: bold;
+  }
+}
+
 .ood-persona {
   background-color: $color-white;
   border-radius: 3px;
