Parameterize the listserv email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
             |
             <a href="{{ site.repo_url }}">GitHub</a>
             <br>
-            <a href="mailto:opportunity-data@listserv.gsa.gov">opportunity-data@listserv.gsa.gov</a>
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a>
           </p>
         </address>
       </div>
