Add Commerce logo to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,10 @@
            ><img class="usa-footer-logo-img"
                  src="{{ "/img/logos/hud.png" | prepend: site.baseurl }}"
                  alt="HUD Logo"></a>
+        <a href="https://www.commerce.gov"
+           ><img class="usa-footer-logo-img"
+                 src="{{ "/img/logos/commerce.png" | prepend: site.baseurl }}"
+                 alt="Commerce Logo"></a>
         <a href="https://presidentialinnovationfellows.gov"
            ><img class="usa-footer-logo-img"
                  src="{{ "/img/logos/pif.png" | prepend: site.baseurl }}"
