Add some attribution text to the hero section.
Largely to help identify the supporting agencies.

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,14 @@ footer {
   background-size: cover;
   background-position: center bottom;
 
+  a {
+    color: $color-gray-lighter;
+
+    &:hover {
+      color: $color-white;
+    }
+  }
+
   & > * {
     color: $color-white !important;
   }
